<resources>
    <string name="app_name" translatable="false">FlagTest</string>
    <string name="title">European Flags</string>
    <string name="option_text" translatable="false"> </string>
    <string name="ready_button_text">Ready</string>
    <string name="file_name">euroflags.test</string>
    <string name="not_all_answered">You haven\'t answered all the questions yet.</string>
    <string name="test_result">You have %1$d right answers.</string>
    <string name="user_name">Name:</string>
    <string name="save_result_label">Save my result</string>
    <string name="ok_button_label">Continue to hall of fame</string>
    <string name="empty_list">No results yet</string>
    <string name="new_game">New game</string>

    <string name="top_list_filename" translatable="false">toplist.dat</string>
    <string name="save_error">Error with saving results</string>
    <string name="load_error">Error with loading results</string>
    <string name="hall_of_fame_title">Hall of Fame</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="points">Points</string>
    <string name="name_error">Fill in the name field, if you want to save your result</string>

    <string name="results">results</string>
</resources>
