<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.flagtest.HallOfFame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:padding="@dimen/list_item_padding"
            android:text="@string/hall_of_fame_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="@dimen/title_padding">

            <TextView
                style="@style/toplistHeadText"
                android:gravity="left"
                android:text="@string/rank" />

            <TextView
                style="@style/toplistHeadText"
                android:gravity="center"
                android:text="@string/name" />

            <TextView
                style="@style/toplistHeadText"
                android:gravity="right"
                android:text="@string/points" />
        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:padding="@dimen/title_padding"></ListView>

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/title_padding"
            android:text="@string/new_game" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_list" />

</RelativeLayout>
