<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.flagtest.PersonalInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/save_checkbox"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/save_result_label" />

    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok_button_label" />

</LinearLayout>
